# qd-search

./: .claudeignore  .gitignore  .subtrees  CLAUDE.md  README.md
.github/scripts/: ai_review.py
.github/workflows/: ci.yml
Automated-AI-Researcher/: .gitignore  README.md
Automated-AI-Researcher/agent/: agent.py  api.py  compute_idea_stats.py  evolutionary_search.py  full_pipeline.py  ideas_to_zips.py  local_executor.py  retrieve_training_logs.py  upload_repo_variants.py
Automated-AI-Researcher/env/grpo/: drgrpo_grader.py  evaluate.py  grpo.py  grpo_utils.py  pyproject.toml  run.sh  run_job.sh  sample.py  utils.py
Automated-AI-Researcher/env/nanogpt/: fineweb.py  pyproject.toml  run.sh  run_job.sh  train.py
Automated-AI-Researcher/scripts/: _run_tmux.sh  prepare_debug_data.sh  prepare_fineweb_data.sh  run_debug.sh  run_evo_dipsy.sh  run_evo_experiment.sh  run_faithful.sh  run_faithful_pro.sh
aideml/: .gitignore
aira-dojo/: .gitignore
aira-dojo/notebooks/: view_results.ipynb  view_results_executed.ipynb
aira-dojo/scripts/: analyze_evo_decisions.py  analyze_replay_results.py  check_gemini_api.sh  compare_selection_operators.py  generate_crossover_plans.py  run.sh  (+10 more)
docs/: benchmark-research.md  codebases.md  codeevolve_architecture_diagram.md  execution_grounded_ai_researcher.md  notes_ml_agent_benchmarks.md  research_prompt_short_horizon_benchmarks.md  short_horizon_benchmarks.md
evaluator/: __init__.py  benchmark.py  llm.py  loaders.py  metrics.py  models.py  predictors.py  pyproject.toml  results.py  swiss.py
evaluator/tests/: test_benchmark.py  test_loaders.py  test_metrics.py  test_models.py  test_predictors.py  test_swiss.py
omni-epic/: .gitignore  LICENSE  README.md
qd/: __init__.py  cvt.py  features.py  integration.py  map_elites.py  metrics.py  pyproject.toml  selection.py
qd/tests/: test_archive.py  test_features.py  test_integration.py
science-codeevolve/: .gitignore  README.md
(+126 files in other folders)
