[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluator"
version = "0.1.0"
description = "Benchmark LLM-based prediction of ML solution quality."
requires-python = ">=3.10"
dependencies = ["litellm"]

[project.optional-dependencies]
test = ["pytest"]
