[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qd"
version = "0.1.0"
description = "Standalone MAP-Elites library for quality-diversity search."
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["ruff", "mypy", "pytest"]
